--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.7"
 psycopg2-binary = "^2.9.9"
 black = "^24.4.2"
 pillow = "^10.4.0"
 ipython = "^8.26.0"
 django-stubs = "^5.0.2"
+django = "4.2.2"
 
 
 [build-system]
