--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pillow = "^10.4.0"
 ipython = "^8.26.0"
 django-stubs = "^5.0.2"
 django = "4.2.2"
+redis = "^5.0.8"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
